--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "GPL",
   "dependencies": {
+    "@types/later": "^1.2.5",
+    "@types/node": "^12.7.3",
     "blynk-library": "^0.4.7",
     "dotenv": "^4.0.0",
     "later": "^1.2.0",
-    "onoff": "^1.1.7"
+    "onoff": "^4.1.0"
   }
 }
